Start resp design on services

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 	<!-- Navigation section
 	================================================== -->
-	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav">
 		<a class="navbar-brand" href="#">
 			<img src="images/logo.png" class = "img-fluid logo" alt="">
 		</a>
@@ -98,19 +98,19 @@
 					<a class="nav-link" href="#">INICIO</a>
 				</li>
 				<li class="nav-item px-2">
-					<a class="nav-link" href="#">NOSOTROS</a>
+					<a class="nav-link" href="#nosotros">NOSOTROS</a>
 				</li>				
 				<li class="nav-item px-2">
-					<a class="nav-link" href="#">SERVICIOS</a>
+					<a class="nav-link" href="services_resp.html">SERVICIOS</a>
 				</li>
 				<li class="nav-item px-2">
-					<a class="nav-link" href="#">CLIENTES</a>
+					<a class="nav-link" href="customers.html">CLIENTES</a>
 				</li>
 				<li class="nav-item px-2">
-					<a class="nav-link" href="#">INDICADORES</a>
+					<a class="nav-link" href="contact.html">INDICADORES</a>
 				</li>
 				<li class="nav-item px-2">
-					<a class="nav-link" href="#">CONTÁCTANOS</a>
+					<a class="nav-link" href="contact.html#contact">CONTÁCTANOS</a>
 				</li>
 			</ul>			
 		</div>
@@ -220,7 +220,8 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-md-12 p-0">
-					<img src="images/pie_texto.png" class="img-fluid">
+					<img src="images/pie_texto.png" class="img-fluid pie-desk">
+					<img src="images/pie_resp.jpg" class="img-fluid pie-mov">
 				</div>	
 			</div>	
 		</div>	
