--- a/services_resp.html
+++ b/services_resp.html
@@ -118,35 +118,46 @@
 
 
 
-	<!-- Service seccion
-	================================================== -->
-	<div class="after-nav-margin" id="services"></div>
+<!-- Service seccion
+================================================== -->
+<div class="after-nav-margin" id="services"></div>
 
-	<div class = "container">
-		<div class="row title">
-			<div class="col-md-12 col-sm-12 wow bounceIn">
-				<div class="identity-title">
-					<h2>Servicios</h2>				
-				</div>
+<div class = "container">
+	<div class="row title">
+		<div class="col-md-12 col-sm-12 wow bounceIn">
+			<div class="identity-title">
+				<h2>Servicios</h2>				
 			</div>
 		</div>
-
-
-		<!-- Consultoria -->
-		<section class="service">
-			<div class="row">
-				<div class="col-lg-5 col-md-5 col-sm-12 wow fadeInUp " data-wow-delay="0.4s">
-					<img src="images/consultoria_1.jpg" class="img-fluid" alt="Identidad">
-				</div>	
-				<div class="col-lg-7 col-md-7 col-sm-12 wow fadeInUp" data-wow-delay="0.4s">
-					<img src="images/consultoria_2.jpg" class="img-fluid " alt="Identidad">
-				</div>				
-			</div>
-		</section>
-
-
 	</div>
 
+
+	<!-- Consultoria -->
+	<section class="service">
+		<div class="row">
+			<div class="col-lg-6 col-md-6 col-sm-12 wow fadeInUp " data-wow-delay="0.4s">
+				<img src="images/consultoria_1.jpg" class="img-fluid" alt="Identidad">
+			</div>	
+			<div class="col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="0.4s">
+				<img src="images/consultoria_2.jpg" class="img-fluid" alt="Identidad">
+			</div>				
+		</div>
+	</section>
+
+
+</div>
+
+
+	<!-- Auditoria -->
+	<section class="service mt-5">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12 wow fadeInUp" data-wow-delay="0.2s">
+					<img src="images/consultoria.jpg" class="img-fluid" alt="auditoria">
+				</div>		
+			</div>
+		</div>
+	</section>
 
 	<!-- Auditoria -->
 	<section class="service ">
@@ -193,32 +204,30 @@
 	</section>
 
 
-	<!-- Pie de pagina (Footer)
-	==================================================  -->
-	<footer>
-		<div class="col-md-12 no-padding">
-			<img src="images/pie_texto.png" class="img-fluid">
-		</div>	
-	</footer>
+<!-- Pie de pagina (Footer)
+==================================================  -->
+<footer>
+	<div class="col-md-12 no-padding">
+		<img src="images/pie_texto.png" class="img-fluid">
+	</div>	
+</footer>
 
-	<!-- Javascript
-	================================================== 
-	<script src="js/jquery.js"></script>
-	<script src="js/bootstrap.min.js"></script>
+<!-- Javascript
+================================================== 
+<script src="js/jquery.js"></script>
+<script src="js/bootstrap.min.js"></script>
 
-	<script src="js/jquery.parallax.js"></script>
-	-->
+<script src="js/jquery.parallax.js"></script>
+-->
 
-	<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
 
 
-	<script src="js/wow.min.js"></script>
-	<script src="js/custom.js"></script>
+<script src="js/wow.min.js"></script>
+<script src="js/custom.js"></script>
 
 </body>
-
-
 </html>
