resp implemented on customers and services

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 					<a class="nav-link" href="#nosotros">NOSOTROS</a>
 				</li>				
 				<li class="nav-item px-2">
-					<a class="nav-link" href="services_resp.html">SERVICIOS</a>
+					<a class="nav-link" href="services.html">SERVICIOS</a>
 				</li>
 				<li class="nav-item px-2">
 					<a class="nav-link" href="customers.html">CLIENTES</a>
@@ -149,8 +149,11 @@
 	<!-- Section title -->
 	<div class = "container">
 		<div class="row title">
-			<div class="col-md-12 col-sm-12 wow bounceIn" data-wow-delay="0.4s">
-				<div class="">
+			<div class="col-md-12 col-sm-12 mb-3 wow bounceIn" data-wow-delay="0.4s">
+				<div class="only-mobile">
+					<h4>Nosotros</h4>				
+				</div>
+				<div class="only-desktop">
 					<h2>Nosotros</h2>				
 				</div>
 			</div>
@@ -168,13 +171,13 @@
 
 		<section id = "identity">		
 			<div class="row">
-				<div class="col-lg-4 col-md-4 col-sm-12 mt-3 wow fadeInUp " data-wow-delay="0.4s">
+				<div class="col-lg-4 col-md-4 col-sm-12  wow fadeInUp " data-wow-delay="0.4s">
 					<img src="images/vision.jpg" class="img-fluid align-image" alt="Identidad">
 				</div>	
-				<div class="col-lg-4 col-md-4 col-sm-12 mt-3 wow fadeInUp" data-wow-delay="0.6s">
+				<div class="col-lg-4 col-md-4 col-sm-12  wow fadeInUp" data-wow-delay="0.6s">
 					<img src="images/mision.jpg" class="img-fluid align-image" alt="Identidad">
 				</div>	
-				<div class="col-lg-4 col-md-4 col-sm-12 mt-3 wow fadeInUp" data-wow-delay="0.8s">
+				<div class="col-lg-4 col-md-4 col-sm-12  wow fadeInUp" data-wow-delay="0.8s">
 					<img src="images/objetivo.jpg" class="img-fluid align-image" alt="Identidad">
 				</div>	
 			</div>		
@@ -188,20 +191,23 @@
 
 		<!-- Section title -->
 		<div class="row title">
-			<div class="col-md-12 col-sm-12 wow bounceIn">				
-				<h2>Valores</h2>						
+			<div class="only-mobile">
+				<h4>Valores</h4>				
+			</div>
+			<div class="only-desktop">
+				<h2>Valores</h2>				
 			</div>
 		</div>
 
 		<section id = "values">		
 			<div class="row">
-				<div class="valores">
+				<div class="only-desktop">
 					<div class="col-md-12 wow fadeInUp" data-wow-delay="0.4s">
 						<img src="images/values.jpg" class="img-fluid" alt="Valores y equipo profesional">
 					</div>	
 				</div>
 
-				<div class="valores-divided">
+				<div class="only-mobile">
 					<div class="col-lg-6 col-md-6 col-sm-12 wow fadeInUp no-padding-margin-y" data-wow-delay="0.4s">
 						<img src="images/profesional.jpg" class="img-fluid" alt="Valores y equipo profesional">
 					</div>	
