--- a/index_resp.html
+++ b/index_resp.html
@@ -217,13 +217,13 @@
 
 		<section id = "values">		
 			<div class="row">
-				<div class="valores">
+				<div class="only-mobile">
 					<div class="col-md-12 wow fadeInUp" data-wow-delay="0.4s">
 						<img src="images/values.jpg" class="img-responsive" alt="Valores y equipo profesional">
 					</div>	
 				</div>
 
-				<div class="valores-divided">
+				<div class="only-desktop">
 					<div class="col-lg-6 col-md-6 col-sm-12 wow fadeInUp no-padding-margin-y" data-wow-delay="0.4s">
 						<img src="images/profesional.jpg" class="img-responsive" alt="Valores y equipo profesional">
 					</div>	
