--- a/customers.html
+++ b/customers.html
@@ -2,19 +2,24 @@
 <html lang="en">
 <head>
 
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- Deprecated tag
+	<meta http-equiv="X-UA-Compatible" content="IE=Edge"> -->	
+
+	<meta charset="utf-8">	
 	<meta name="keywords" content="">
 	<meta name="description" content="">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no, user-scalable=no">
 
 	<!-- Site title
    ================================================== -->
 	<title>Auditores y consultores CH</title>
 
 	<!-- Bootstrap CSS
-   ================================================== -->
-	<link rel="stylesheet" href="css/bootstrap.min.css">
+   ================================================== 
+	<link rel="stylesheet" href="css/bootstrap.min.css">-->
+	
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
 
 	<!-- Animate CSS
    ================================================== -->
@@ -29,10 +34,9 @@
    ================================================== -->
 	<link rel="stylesheet" href="css/nivo-lightbox.css">	
 
-
 	<!-- Main CSS
    ================================================== -->
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style-resp.css">
 
 	<!-- Google web font
    ================================================== -->
@@ -46,91 +50,131 @@
 </head>
 
 
-<body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
+<body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">	
 
 
-<!-- Preloader section
-================================================== -->
-<div class="preloader">
-	<!-- ++ I removed the 'sk-spinner' class -->
-	<div class="sk-spinner-pulse"></div>
-</div>
+	<!-- Preloader section
+	================================================== -->
+	<div class="preloader">		
+		<div class="sk-spinner-pulse"></div>
+	</div>
 
 
-<!-- Navigation section
-================================================== -->
-<div id="navigation" class="top-position">
-	<div class="navbar navbar-default" role="navigation">
-		<div class="container">
-			<div class="collapse navbar-collapse">
-				<ul class="nav navbar-nav">
-					<li><a title="ch s.a.s" href="index.html"><img src="images/logo.png" width="337" height="135" alt="ch s.a.s" /></a></li>
-					<li><a href="index.html" >INICIO</a></li>
-					<li><a href="index.html#nosotros" class="">NOSOTROS</a></li>	
-					<li><a href="services.html" class="">SERVICIOS</a></li>					
-					<li><a href="#customers">CLIENTES</a></li>					
-					<li><a href="contact.html" class="">INDICADORES</a></li>	
-					<li><a href="contact.html#contact" class="">CONTÁCTANOS</a></li>		
-				</ul>
+	<!-- Navigation section
+	==================================================  
+	<div id = "navigation" class="top-position">
+		<div class="navbar navbar-default" role="navigation">
+			<div class="container">
+				<div class="collapse navbar-collapse">
+					<ul class="nav navbar-nav">
+						<li><a title="ch s.a.s" href="#navigation"><img src="images/logo.png" width="337" height="135" alt="ch s.a.s" /></a></li>
+						<li><a href="#navigation" >INICIO</a></li>
+						<li><a href="#nosotros" class="">NOSOTROS</a></li>					
+						<li><a href="services.html" class="">SERVICIOS</a></li>	
+						<li><a href="customers.html#navigation">CLIENTES</a></li>		
+						<li><a href="contact.html" class="">INDICADORES</a></li>
+						<li><a href="contact.html#contact" class="">CONTÁCTANOS</a></li>					
+					</ul>
+				</div>
 			</div>
 		</div>
 	</div>
-</div>
+	-->
+	
+
+	<!-- Navigation section
+	================================================== -->
+	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+		<a class="navbar-brand" href="#">
+			<img src="images/logo.png" class = "img-fluid logo" alt="">
+		</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		
+		<div class="collapse navbar-collapse" id="navbarContent">
+			<ul class="navbar-nav mr-auto my-2">
+				<li class="nav-item active px-2">
+					<a class="nav-link" href="#">INICIO</a>
+				</li>
+				<li class="nav-item px-2">
+					<a class="nav-link" href="#nosotros">NOSOTROS</a>
+				</li>				
+				<li class="nav-item px-2">
+					<a class="nav-link" href="services.html">SERVICIOS</a>
+				</li>
+				<li class="nav-item px-2">
+					<a class="nav-link" href="customers.html">CLIENTES</a>
+				</li>
+				<li class="nav-item px-2">
+					<a class="nav-link" href="contact.html">INDICADORES</a>
+				</li>
+				<li class="nav-item px-2">
+					<a class="nav-link" href="contact.html#contact">CONTÁCTANOS</a>
+				</li>
+			</ul>			
+		</div>
+	</nav>
 
 
 <!-- Customers seccion
 ================================================== -->
-<div id="customers"></div>
+<div class="after-nav-margin" id="customers"></div>
 
 	<!-- Section title -->
-	<div class="row ">
-		<div class="col-md-offset-1 col-md-8 col-sm-offset-1 col-sm-10 wow bounceIn">						
-			<div class="customers-title ">
-				<h1>Principales clientes</h1>				
-			</div>									
-		</div>
-	</div>
-
-	<!-- Customers gallery -->
 	<div class="container">
+		<div class="row ">
+			<div class="col-md-offset-1 col-md-8 col-sm-offset-1 col-sm-10 wow bounceIn">					
+				<div class="customers-title ">
+					<div class="only-mobile">
+						<h4>Principales clientes</h4>				
+					</div>
+					<div class="only-desktop">
+						<h2>Principales clientes</h2>				
+					</div>					
+				</div>									
+			</div>
+		</div>
+
+	<!-- Customers gallery -->	
 		<div class="row">
-			<div class="col-md-4 customer">				
+			<div class="col-md-4 col-sm-12 p-0 m-0">
 				<a href="http://abconstrucciones.co/" target="_blank" alt="abconstrucciones">
-					<img src="images/ab.jpg" class="img-responsive">
+					<img src="images/ab.jpg" class="img-fluid">
 				</a>
 			</div>
-			<div class="col-md-4 customer">
+			<div class="col-md-4 col-sm-12 p-0 m-0 mr-auto">
 				<a href="http://www.cmt.net.co/about.html" target="_blank" alt="cmt">
-					<img src="images/cmtc.jpg" class="img-responsive ">
+					<img src="images/cmtc.jpg" class="img-fluid ">
 				</a>
 			</div>
-			<div class="col-md-4 customer">
+			<div class="col-md-4 col-sm-12 p-0 m-0">
 				<a href="https://www.colombia.com/" target="_blank" alt="colombia.com">
-					<img src="images/colombia.jpg" class="img-responsive">
+					<img src="images/colombia.jpg" class="img-fluid">
 				</a>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-4 customer">
+			<div class="col-md-4 col-sm-12 p-0 m-0">
 				<a href="http://www.delightcane.com/" target="_blank" alt="delightcane">
-					<img src="images/cane.jpg" class="img-responsive">
+					<img src="images/cane.jpg" class="img-fluid">
 				</a>
 			</div>
-			<div class="col-md-4 customer">
+			<div class="col-md-4 col-sm-12 p-0 m-0">
 				<a href="http://www.formandofuturo.org/" target="_blank" alt="fundacion futuro">
-					<img src="images/fundacion.jpg" class="img-responsive">
+					<img src="images/fundacion.jpg" class="img-fluid">
 				</a>
 			</div>
-			<div class="col-md-4 customer">
+			<div class="col-md-4 col-sm-12 p-0 m-0">
 				<a href="http://amtlogistica.net/" target="_blank" alt="amt logistica">
-					<img src="images/amt.jpg" class="img-responsive">
+					<img src="images/amt.jpg" class="img-fluid">
 				</a>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-4 customer">
+			<div class="col-md-4 col-sm-12 p-0 m-0">
 				<a href="http://grafitalento.com/" target="_blank" alt="Grafitalento S.A.S">
-					<img src="images/grafi.jpg" class="img-responsive ">
+					<img src="images/grafi.jpg" class="img-fluid ">
 				</a>
 			</div>			
 		</div>
@@ -140,19 +184,26 @@
 ==================================================  -->
 <footer>
 	<div class="col-md-12 no-padding">
-		<img src="images/pie_texto.png" class="img-responsive">
+		<img src="images/pie_texto.png" class="img-fluid">
 	</div>	
 </footer>
 
 <!-- Javascript
-================================================== -->
-<script src="js/jquery.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.sticky.js"></script>
-<script src="js/jquery.backstretch.min.js"></script>
-<script src="js/nivo-lightbox.min.js"></script>
-<script src="js/wow.min.js"></script>
-<script src="js/custom.js"></script>
+	================================================== 
+	<script src="js/jquery.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	
+	<script src="js/jquery.parallax.js"></script>
+	-->
+
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+	
+	
+	<script src="js/wow.min.js"></script>
+	<script src="js/custom.js"></script>
 
 
 </body>
