--- a/services.html
+++ b/services.html
@@ -85,7 +85,7 @@
 	<!-- Navigation section
 	================================================== -->
 	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav">
-		<a class="navbar-brand" href="#">
+		<a class="navbar-brand" href="index.html">
 			<img src="images/logo.png" class = "img-fluid logo" alt="">
 		</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -95,7 +95,7 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto my-2">
 				<li class="nav-item active px-2">
-					<a class="nav-link" href="#">INICIO</a>
+					<a class="nav-link" href="index.html">INICIO</a>
 				</li>
 				<li class="nav-item px-2">
 					<a class="nav-link" href="#nosotros">NOSOTROS</a>
@@ -125,72 +125,90 @@
 	<div class = "container">
 		<div class="row title">
 			<div class="col-md-12 col-sm-12 wow bounceIn">
-				<div class="identity-title">
+				<div class="only-mobile">
+					<h4>Servicios</h4>				
+				</div>
+				<div class="only-desktop">
 					<h2>Servicios</h2>				
 				</div>
 			</div>
 		</div>
 
-
 		<!-- Consultoria -->
-		<section class="service">
+		<section>
 			<div class="row">
-				<div class="col-lg-5 col-md-5 col-sm-12 wow fadeInUp " data-wow-delay="0.4s">
+				<div class="col-lg-5 col-md-5 col-sm-12 p-0 m-0 wow fadeInUp " data-wow-delay="0.4s">
 					<img src="images/consultoria_1.jpg" class="img-fluid" alt="Identidad">
 				</div>	
-				<div class="col-lg-7 col-md-7 col-sm-12 wow fadeInUp" data-wow-delay="0.4s">
+				<div class="col-lg-7 col-md-7 col-sm-12 p-0 m-0 wow fadeInUp" data-wow-delay="0.4s">
 					<img src="images/consultoria_2.jpg" class="img-fluid " alt="Identidad">
 				</div>				
 			</div>
 		</section>
 
+		<!-- Auditoria -->
+		<section>
+			<div class="row">
+				<div class="only-desktop">
+					<div class="col-lg-12 col-md-12 p-0 m-0 wow fadeInUp " data-wow-delay="0.4s">
+						<img src="images/auditoria.jpg" class="img-fluid" alt="Identidad">
+					</div>
+				</div>
+				<div class="only-mobile">
+					<div class="col-lg-6 col-md-6 col-sm-12 p-0 m-0 wow fadeInUp " data-wow-delay="0.4s">
+						<img src="images/auditoria_2.jpg" class="img-fluid" alt="Identidad">
+					</div>	
+					<div class="col-lg-6 col-md-6 col-sm-12 p-0 m-0 wow fadeInUp" data-wow-delay="0.4s">
+						<img src="images/auditoria_1.jpg" class="img-fluid " alt="Identidad">
+					</div>	
+				</div>				
+			</div>
+		</section>
+
+		<!-- Revisoria fiscal -->
+		<section>
+			<div class="row">
+				<div class="col-lg-5 col-md-5 col-sm-12 p-0 m-0 wow fadeInUp " data-wow-delay="0.4s">
+					<img src="images/revisoria_1.jpg" class="img-fluid" alt="Identidad">
+				</div>	
+				<div class="col-lg-7 col-md-7 col-sm-12 p-0 m-0 wow fadeInUp" data-wow-delay="0.4s">
+					<img src="images/revisoria_2.jpg" class="img-fluid " alt="Identidad">
+				</div>				
+			</div>
+		</section>
+
+		<!-- Outsourcing contable -->
+		<section>
+			<div class="row">
+				<div class="only-desktop">
+					<div class="col-lg-12 col-md-12 p-0 m-0 wow fadeInUp " data-wow-delay="0.4s">
+						<img src="images/outsourcing.jpg" class="img-fluid" alt="Identidad">
+					</div>
+				</div>
+				<div class="only-mobile">
+					<div class="col-lg-6 col-md-6 col-sm-12 p-0 m-0 wow fadeInUp " data-wow-delay="0.4s">
+						<img src="images/outsourcing_2.jpg" class="img-fluid" alt="Identidad">
+					</div>	
+					<div class="col-lg-6 col-md-6 col-sm-12 p-0 m-0 wow fadeInUp" data-wow-delay="0.4s">
+						<img src="images/outsourcing_1.jpg" class="img-fluid " alt="Identidad">
+					</div>	
+				</div>				
+			</div>
+		</section>
+
+		<!-- Asesoria en las normas NIC -->
+		<section>
+			<div class="row">
+				<div class="col-lg-5 col-md-5 col-sm-12 p-0 m-0 wow fadeInUp " data-wow-delay="0.4s">
+					<img src="images/asesorias_1.jpg" class="img-fluid" alt="Identidad">
+				</div>	
+				<div class="col-lg-7 col-md-7 col-sm-12 p-0 m-0 wow fadeInUp" data-wow-delay="0.4s">
+					<img src="images/asesorias_2.jpg" class="img-fluid " alt="Identidad">
+				</div>				
+			</div>
+		</section>
 
 	</div>
-
-
-	<!-- Auditoria -->
-	<section class="service ">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12 wow fadeInUp" data-wow-delay="0.2s">
-					<img src="images/auditoria.jpg" class="img-fluid" alt="auditoria">
-				</div>		
-			</div>
-		</div>
-	</section>
-
-	<!-- Revisoria fiscal -->
-	<section class="service ">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12 wow fadeInUp" data-wow-delay="0.2s">
-					<img src="images/revisoria.jpg" class="img-fluid" alt="revisoria">
-				</div>		
-			</div>
-		</div>
-	</section>
-
-	<!-- Outsourcing contable -->
-	<section class="service ">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12 wow fadeInUp" data-wow-delay="0.2s">
-					<img src="images/outsourcing.jpg" class="img-fluid" alt="outsourcing">
-				</div>		
-			</div>
-		</div>
-	</section>
-
-	<!-- Asesoria en las normas NIC -->
-	<section class="service ">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12 wow fadeInUp" data-wow-delay="0.2s">
-					<img src="images/asesorias.jpg" class="img-fluid" alt="asesorias">
-				</div>		
-			</div>
-		</div>
-	</section>
 
 
 	<!-- Pie de pagina (Footer)
@@ -205,7 +223,7 @@
 	================================================== 
 	<script src="js/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-
+	
 	<script src="js/jquery.parallax.js"></script>
 	-->
 
@@ -213,8 +231,8 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-
-
+	
+	
 	<script src="js/wow.min.js"></script>
 	<script src="js/custom.js"></script>
 
