Deploy without contact neither indicators

--- a/contact.html
+++ b/contact.html
@@ -116,10 +116,66 @@
 		</div>
 	</nav>
 
+	<div class="after-nav-margin" id="indicadores"></div>
+
+	<!-- Section title -->
+	<div class="container">
+		<div class="row ">
+			<div class="col-md-offset-1 col-md-8 col-sm-offset-1 col-sm-10 wow bounceIn">
+				<div class="only-mobile">
+					<h4>Indicadores</h4>				
+				</div>
+				<div class="only-desktop">
+					<h2>Indicadores</h2>				
+				</div>									
+			</div>
+		</div>
 
 
-<!-- Indicadores seccion
-================================================== -->
+		<!-- Indicadores seccion
+		================================================== -->
+		<div class="row">				
+		
+														
+			<div class="col-lg-8 col-md-7 col-sm-12 wow fadeInUp " data-wow-delay="0.4s">
+				<img src="images/indicadores.jpg" class="img-fluid" alt="Identidad">				
+			</div>
+
+
+			<div class="col-lg-4 col-md-5 col-sm-12">												
+				<div class="wow flipInX">						
+					<!-- DolarWeb IndMax Start --><div id="IndicadoresMax"><h2><a href="https://dolar.wilkinsonpc.com.co/">Dolar Hoy Colombia</a></h2></div><script type="text/javascript" src="https://dolar.wilkinsonpc.com.co/widgets/gratis/indicadores-economicos-max.js?ancho=410&alto=380&fondo=transparent&fsize=17&ffamily=sans-serif&fcolor=000000"></script><!-- DolarWeb IndMax End -->			
+				</div>								
+			</div>
+		</div>
+
+		<!-- Banck and Dian seccion
+		================================================== -->
+		<section id="dian">
+			
+			<div class="row">			
+				<div  class="col-md-5 col-sm-12 ">		
+					<a href="https://www.dian.gov.co/" target="_blank">
+						<img src="images/dian.png" height="110px" class="" alt="dian">			
+					</a>					
+				</div>
+				<div class="col-md-7 col-sm-12 ">			
+					<a href="https://www.banrep.gov.co/" target="_blank">
+						<img src="images/republica.png" height="100px" class="" alt="banco de la republica">	
+					</a>									
+				</div>
+			</div>
+			
+		</section>
+	</div>
+
+
+
+	
+
+
+<!-- Indicadores seccion DEPRECATED
+================================================== 
 <div class = "container-fluid">
 	<div class="row">			
 		<div class="col-md-8 col-sm-12 no-padding">			
@@ -129,32 +185,12 @@
 		</div>
 		<div class="col-md-4 col-sm-12 no-padding">								
 			<div class="indicadores-container wow flipInX">						
-				<!-- DolarWeb IndMax Start --><div id="IndicadoresMax"><h2><a href="https://dolar.wilkinsonpc.com.co/">Dolar Hoy Colombia</a></h2></div><script type="text/javascript" src="https://dolar.wilkinsonpc.com.co/widgets/gratis/indicadores-economicos-max.js?ancho=410&alto=380&fondo=transparent&fsize=17&ffamily=sans-serif&fcolor=000000"></script><!-- DolarWeb IndMax End -->			
+				<div id="IndicadoresMax"><h2><a href="https://dolar.wilkinsonpc.com.co/">Dolar Hoy Colombia</a></h2></div><script type="text/javascript" src="https://dolar.wilkinsonpc.com.co/widgets/gratis/indicadores-economicos-max.js?ancho=410&alto=380&fondo=transparent&fsize=17&ffamily=sans-serif&fcolor=000000"></script>			
 			</div>								
 		</div>
 	</div>
 </div>
-
-
-<!-- Banck and Dian seccion
-================================================== -->
-<section id="dian">
-	<div class="container">
-		<div class="row">			
-			<div  class="col-md-5 col-sm-12 align-image">		
-				<a href="https://www.dian.gov.co/" target="_blank">
-					<img src="images/dian.png" height="110px" class="" alt="dian">			
-				</a>					
-			</div>
-			<div class="col-md-7 col-sm-12 align-image">			
-				<a href="https://www.banrep.gov.co/" target="_blank">
-					<img src="images/republica.png" height="100px" class="" alt="banco de la republica">	
-				</a>									
-			</div>
-		</div>
-	</div>
-</section>
-
+-->
 
 
 <!-- Contact seccion
