--- a/customers.html
+++ b/customers.html
@@ -36,7 +36,7 @@
 
 	<!-- Main CSS
    ================================================== -->
-	<link rel="stylesheet" href="css/style-resp.css">
+	<link rel="stylesheet" href="css/style.css">
 
 	<!-- Google web font
    ================================================== -->
@@ -85,7 +85,7 @@
 	<!-- Navigation section
 	================================================== -->
 	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-		<a class="navbar-brand" href="#">
+		<a class="navbar-brand" href="index.html">
 			<img src="images/logo.png" class = "img-fluid logo" alt="">
 		</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -95,100 +95,104 @@
 		<div class="collapse navbar-collapse" id="navbarContent">
 			<ul class="navbar-nav mr-auto my-2">
 				<li class="nav-item active px-2">
-					<a class="nav-link" href="#">INICIO</a>
+					<a class="nav-link" href="index.html">INICIO</a>
 				</li>
 				<li class="nav-item px-2">
-					<a class="nav-link" href="#nosotros">NOSOTROS</a>
+					<a class="nav-link" href="index.html#nosotros">NOSOTROS</a>
 				</li>				
 				<li class="nav-item px-2">
 					<a class="nav-link" href="services.html">SERVICIOS</a>
 				</li>
 				<li class="nav-item px-2">
-					<a class="nav-link" href="customers.html">CLIENTES</a>
+					<a class="nav-link" href="#">CLIENTES</a>
 				</li>
 				<li class="nav-item px-2">
-					<a class="nav-link" href="contact.html">INDICADORES</a>
+					<a class="nav-link" href="#">INDICADORES</a>
 				</li>
 				<li class="nav-item px-2">
-					<a class="nav-link" href="contact.html#contact">CONTÁCTANOS</a>
+					<a class="nav-link" href="#">CONTÁCTANOS</a>
 				</li>
 			</ul>			
 		</div>
 	</nav>
 
 
-<!-- Customers seccion
-================================================== -->
-<div class="after-nav-margin" id="customers"></div>
+	<!-- Customers seccion
+	================================================== -->
+	<div class="after-nav-margin" id="customers"></div>
 
-	<!-- Section title -->
-	<div class="container">
-		<div class="row ">
-			<div class="col-md-offset-1 col-md-8 col-sm-offset-1 col-sm-10 wow bounceIn">					
-				<div class="customers-title ">
-					<div class="only-mobile">
-						<h4>Principales clientes</h4>				
-					</div>
-					<div class="only-desktop">
-						<h2>Principales clientes</h2>				
-					</div>					
-				</div>									
+		<!-- Section title -->
+		<div class="container">
+			<div class="row ">
+				<div class="col-md-offset-1 col-md-8 col-sm-offset-1 col-sm-10 wow bounceIn">					
+					<div class="customers-title ">
+						<div class="only-mobile">
+							<h4>Principales clientes</h4>				
+						</div>
+						<div class="only-desktop">
+							<h2>Principales clientes</h2>				
+						</div>					
+					</div>									
+				</div>
+			</div>
+
+		<!-- Customers gallery -->	
+			<div class="row">
+				<div class="col-md-4 col-sm-12 p-0 m-0">
+					<a href="http://abconstrucciones.co/" target="_blank" alt="abconstrucciones">
+						<img src="images/ab.jpg" class="img-fluid">
+					</a>
+				</div>
+				<div class="col-md-4 col-sm-12 p-0 m-0 mr-auto">
+					<a href="http://www.cmt.net.co/about.html" target="_blank" alt="cmt">
+						<img src="images/cmtc.jpg" class="img-fluid ">
+					</a>
+				</div>
+				<div class="col-md-4 col-sm-12 p-0 m-0">
+					<a href="https://www.colombia.com/" target="_blank" alt="colombia.com">
+						<img src="images/colombia.jpg" class="img-fluid">
+					</a>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-4 col-sm-12 p-0 m-0">
+					<a href="http://www.delightcane.com/" target="_blank" alt="delightcane">
+						<img src="images/cane.jpg" class="img-fluid">
+					</a>
+				</div>
+				<div class="col-md-4 col-sm-12 p-0 m-0">
+					<a href="http://www.formandofuturo.org/" target="_blank" alt="fundacion futuro">
+						<img src="images/fundacion.jpg" class="img-fluid">
+					</a>
+				</div>
+				<div class="col-md-4 col-sm-12 p-0 m-0">
+					<a href="http://amtlogistica.net/" target="_blank" alt="amt logistica">
+						<img src="images/amt.jpg" class="img-fluid">
+					</a>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-4 col-sm-12 p-0 m-0">
+					<a href="http://grafitalento.com/" target="_blank" alt="Grafitalento S.A.S">
+						<img src="images/grafi.jpg" class="img-fluid ">
+					</a>
+				</div>			
 			</div>
 		</div>
 
-	<!-- Customers gallery -->	
-		<div class="row">
-			<div class="col-md-4 col-sm-12 p-0 m-0">
-				<a href="http://abconstrucciones.co/" target="_blank" alt="abconstrucciones">
-					<img src="images/ab.jpg" class="img-fluid">
-				</a>
-			</div>
-			<div class="col-md-4 col-sm-12 p-0 m-0 mr-auto">
-				<a href="http://www.cmt.net.co/about.html" target="_blank" alt="cmt">
-					<img src="images/cmtc.jpg" class="img-fluid ">
-				</a>
-			</div>
-			<div class="col-md-4 col-sm-12 p-0 m-0">
-				<a href="https://www.colombia.com/" target="_blank" alt="colombia.com">
-					<img src="images/colombia.jpg" class="img-fluid">
-				</a>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-4 col-sm-12 p-0 m-0">
-				<a href="http://www.delightcane.com/" target="_blank" alt="delightcane">
-					<img src="images/cane.jpg" class="img-fluid">
-				</a>
-			</div>
-			<div class="col-md-4 col-sm-12 p-0 m-0">
-				<a href="http://www.formandofuturo.org/" target="_blank" alt="fundacion futuro">
-					<img src="images/fundacion.jpg" class="img-fluid">
-				</a>
-			</div>
-			<div class="col-md-4 col-sm-12 p-0 m-0">
-				<a href="http://amtlogistica.net/" target="_blank" alt="amt logistica">
-					<img src="images/amt.jpg" class="img-fluid">
-				</a>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-4 col-sm-12 p-0 m-0">
-				<a href="http://grafitalento.com/" target="_blank" alt="Grafitalento S.A.S">
-					<img src="images/grafi.jpg" class="img-fluid ">
-				</a>
-			</div>			
-		</div>
-	</div>
+	<!-- Pie de pagina (Footer)
+	==================================================  -->
+	<footer>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-md-12 p-0">
+					<img src="images/pie_texto.png" class="img-fluid">					
+				</div>	
+			</div>	
+		</div>	
+	</footer>
 
-<!-- Pie de pagina (Footer)
-==================================================  -->
-<footer>
-	<div class="col-md-12 no-padding">
-		<img src="images/pie_texto.png" class="img-fluid">
-	</div>	
-</footer>
-
-<!-- Javascript
+	<!-- Javascript
 	================================================== 
 	<script src="js/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
