--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 	<!-- Main CSS
    ================================================== -->
-	<link rel="stylesheet" href="css/style-resp.css">
+   <link rel="stylesheet" href="css/style.css">
 
 	<!-- Google web font
    ================================================== -->
@@ -107,10 +107,10 @@
 					<a class="nav-link" href="customers.html">CLIENTES</a>
 				</li>
 				<li class="nav-item px-2">
-					<a class="nav-link" href="contact.html">INDICADORES</a>
+					<a class="nav-link" href="#">INDICADORES</a>
 				</li>
 				<li class="nav-item px-2">
-					<a class="nav-link" href="contact.html#contact">CONTÁCTANOS</a>
+					<a class="nav-link" href="#">CONTÁCTANOS</a>
 				</li>
 			</ul>			
 		</div>
@@ -127,7 +127,7 @@
 					<div class="button-container home-desk">
 						<img src="images/home_nuevo.jpg" class="img-fluid align-image" alt="Identidad">	  	
 						<a href="services.html" class="wow fadeInUp btn-services" data-wow-delay="0.4s">SERVICIOS</a>
-						<a href="contact.html#contact" class="wow fadeInUp btn-contact" data-wow-delay="0.9s">CONTÁCTANOS</a> 
+						<a href="#" class="wow fadeInUp btn-contact" data-wow-delay="0.9s">CONTÁCTANOS</a> 
 					</div>
 					<div class="home-mov">
 						<img src="images/home_nuevo.jpg" class="img-fluid align-image" alt="Identidad">	
@@ -220,14 +220,26 @@
 
 	</div>
 
-	<!-- Pie de pagina (Footer)
-	==================================================  -->
-	<footer>
+	<!-- Pie de pagina (Footer) PARA RESPONSIVE
+	==================================================  
+
+		<footer>
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-md-12 p-0">
 					<img src="images/pie_texto.png" class="img-fluid pie-desk">
 					<img src="images/pie_resp.jpg" class="img-fluid pie-mov">
+				</div>	
+			</div>	
+		</div>	
+	</footer>
+		-->
+	
+	<footer>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-md-12 p-0">
+					<img src="images/pie_texto.png" class="img-fluid">					
 				</div>	
 			</div>	
 		</div>	
