--- a/services.html
+++ b/services.html
@@ -36,7 +36,7 @@
 
 	<!-- Main CSS
    ================================================== -->
-	<link rel="stylesheet" href="css/style-resp.css">
+   <link rel="stylesheet" href="css/style.css">
 
 	<!-- Google web font
    ================================================== -->
@@ -98,19 +98,19 @@
 					<a class="nav-link" href="index.html">INICIO</a>
 				</li>
 				<li class="nav-item px-2">
-					<a class="nav-link" href="#nosotros">NOSOTROS</a>
+					<a class="nav-link" href="index.html#nosotros">NOSOTROS</a>
 				</li>				
 				<li class="nav-item px-2">
-					<a class="nav-link" href="services.html">SERVICIOS</a>
+					<a class="nav-link" href="#">SERVICIOS</a>
 				</li>
 				<li class="nav-item px-2">
 					<a class="nav-link" href="customers.html">CLIENTES</a>
 				</li>
 				<li class="nav-item px-2">
-					<a class="nav-link" href="contact.html">INDICADORES</a>
+					<a class="nav-link" href="#">INDICADORES</a>
 				</li>
 				<li class="nav-item px-2">
-					<a class="nav-link" href="contact.html#contact">CONTÁCTANOS</a>
+					<a class="nav-link" href="#">CONTÁCTANOS</a>
 				</li>
 			</ul>			
 		</div>
@@ -211,11 +211,16 @@
 	</div>
 
 
+	
 	<!-- Pie de pagina (Footer)
 	==================================================  -->
 	<footer>
-		<div class="col-md-12 no-padding">
-			<img src="images/pie_texto.png" class="img-fluid">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-md-12 p-0">
+					<img src="images/pie_texto.png" class="img-fluid">					
+				</div>	
+			</div>	
 		</div>	
 	</footer>
 
