--- a/index.html
+++ b/index.html
@@ -125,16 +125,13 @@
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 p-0">										
 					<div class="button-container home-desk">
-						<img src="images/home_nuevo.jpg" class="img-fluid align-image" alt="Identidad">	  	
+						<img src="images/home_nuevo.jpg" class="img-fluid " alt="Identidad">	  	
 						<a href="services.html" class="wow fadeInUp btn-services" data-wow-delay="0.4s">SERVICIOS</a>
 						<a href="#" class="wow fadeInUp btn-contact" data-wow-delay="0.9s">CONTÁCTANOS</a> 
 					</div>
 					<div class="home-mov">
-						<img src="images/home_nuevo.jpg" class="img-fluid align-image" alt="Identidad">	
+						<img src="images/home_nuevo.jpg" class="img-fluid " alt="Identidad">	
 					</div>
-
-					<!-- <a href="services.html" class="btn btn-default section-btn wow fadeInUp" data-wow-delay="0.4s">SERVICIOS</a>
-					<a href="contact.html#contact" class="btn btn-default section-btn wow fadeInUp" data-wow-delay="0.9s">CONTÁCTANOS</a>  -->
 				</div>
 			</div>
 		</div>
@@ -148,7 +145,7 @@
 
 	<!-- Section title -->
 	<div class = "container">
-		<div class="row title">
+		<div class="row">
 			<div class="col-md-12 col-sm-12 mb-3 wow bounceIn" data-wow-delay="0.4s">
 				<div class="only-mobile">
 					<h4>Nosotros</h4>				
@@ -171,14 +168,14 @@
 
 		<section id = "identity">		
 			<div class="row">
-				<div class="col-lg-4 col-md-4 col-sm-12  wow fadeInUp " data-wow-delay="0.4s">
-					<img src="images/vision.jpg" class="img-fluid align-image" alt="Identidad">
+				<div class="col-lg-4 col-md-4 col-sm-12 no-padding-mob wow fadeInUp " data-wow-delay="0.4s">
+					<img src="images/vision.jpg" class="img-fluid " alt="Identidad">
 				</div>	
-				<div class="col-lg-4 col-md-4 col-sm-12  wow fadeInUp" data-wow-delay="0.6s">
-					<img src="images/mision.jpg" class="img-fluid align-image" alt="Identidad">
+				<div class="col-lg-4 col-md-4 col-sm-12 no-padding-mob wow fadeInDown" data-wow-delay="0.6s">
+					<img src="images/mision.jpg" class="img-fluid " alt="Identidad">
 				</div>	
-				<div class="col-lg-4 col-md-4 col-sm-12  wow fadeInUp" data-wow-delay="0.8s">
-					<img src="images/objetivo.jpg" class="img-fluid align-image" alt="Identidad">
+				<div class="col-lg-4 col-md-4 col-sm-12 no-padding-mob wow fadeInUp" data-wow-delay="0.8s">
+					<img src="images/objetivo.jpg" class="img-fluid " alt="Identidad">
 				</div>	
 			</div>		
 		</section> 	
@@ -191,27 +188,29 @@
 
 		<!-- Section title -->
 		<div class="row title">
-			<div class="only-mobile">
-				<h4>Valores</h4>				
-			</div>
-			<div class="only-desktop">
-				<h2>Valores</h2>				
+			<div class="col-md-12 col-sm-12 mb-3 wow bounceIn" data-wow-delay="0.4s">
+				<div class="only-mobile">
+					<h4>Valores</h4>				
+				</div>
+				<div class="only-desktop">
+					<h2>Valores</h2>				
+				</div>
 			</div>
 		</div>
 
 		<section id = "values">		
 			<div class="row">
 				<div class="only-desktop">
-					<div class="col-md-12 wow fadeInUp" data-wow-delay="0.4s">
+					<div class="col-md-12 p-0 m-0 wow fadeInUp" data-wow-delay="0.4s">
 						<img src="images/values.jpg" class="img-fluid" alt="Valores y equipo profesional">
 					</div>	
 				</div>
 
 				<div class="only-mobile">
-					<div class="col-lg-6 col-md-6 col-sm-12 wow fadeInUp no-padding-margin-y" data-wow-delay="0.4s">
+					<div class="col-sm-12 p-0 m-0 wow fadeInUp" data-wow-delay="0.4s">
 						<img src="images/profesional.jpg" class="img-fluid" alt="Valores y equipo profesional">
 					</div>	
-					<div class="col-lg-6 col-md-6 col-sm-12 wow fadeInUp no-padding-margin-y" data-wow-delay="0.4s">
+					<div class="col-sm-12 p-0 m-0 wow fadeInUp" data-wow-delay="0.4s">
 						<img src="images/valores.jpg" class="img-fluid" alt="Valores y equipo profesional">
 					</div>	
 				</div>			
@@ -245,6 +244,8 @@
 		</div>	
 	</footer>
 
+
+		
 
 
 	<!-- Javascript
