--- a/contact.html
+++ b/contact.html
@@ -59,33 +59,12 @@
 		<div class="sk-spinner-pulse"></div>
 	</div>
 
-
-	<!-- Navigation section
-	==================================================  
-	<div id = "navigation" class="top-position">
-		<div class="navbar navbar-default" role="navigation">
-			<div class="container">
-				<div class="collapse navbar-collapse">
-					<ul class="nav navbar-nav">
-						<li><a title="ch s.a.s" href="#navigation"><img src="images/logo.png" width="337" height="135" alt="ch s.a.s" /></a></li>
-						<li><a href="#navigation" >INICIO</a></li>
-						<li><a href="#nosotros" class="">NOSOTROS</a></li>					
-						<li><a href="services.html" class="">SERVICIOS</a></li>	
-						<li><a href="customers.html#navigation">CLIENTES</a></li>		
-						<li><a href="contact.html" class="">INDICADORES</a></li>
-						<li><a href="contact.html#contact" class="">CONTÁCTANOS</a></li>					
-					</ul>
-				</div>
-			</div>
-		</div>
-	</div>
-	-->
 	
 
 	<!-- Navigation section
 	================================================== -->
 	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-		<a class="navbar-brand" href="#">
+		<a class="navbar-brand" href="index.html">
 			<img src="images/logo.png" class = "img-fluid logo" alt="">
 		</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -95,10 +74,10 @@
 		<div class="collapse navbar-collapse" id="navbarContent">
 			<ul class="navbar-nav mr-auto my-2">
 				<li class="nav-item active px-2">
-					<a class="nav-link" href="#">INICIO</a>
+					<a class="nav-link" href="index.html">INICIO</a>
 				</li>
 				<li class="nav-item px-2">
-					<a class="nav-link" href="#nosotros">NOSOTROS</a>
+					<a class="nav-link" href="index.html#nosotros">NOSOTROS</a>
 				</li>				
 				<li class="nav-item px-2">
 					<a class="nav-link" href="services.html">SERVICIOS</a>
@@ -107,10 +86,10 @@
 					<a class="nav-link" href="customers.html">CLIENTES</a>
 				</li>
 				<li class="nav-item px-2">
-					<a class="nav-link" href="contact.html">INDICADORES</a>
+					<a class="nav-link" href="#">INDICADORES</a>
 				</li>
 				<li class="nav-item px-2">
-					<a class="nav-link" href="contact.html#contact">CONTÁCTANOS</a>
+					<a class="nav-link" href="#">CONTÁCTANOS</a>
 				</li>
 			</ul>			
 		</div>
@@ -137,35 +116,33 @@
 		<div class="row">				
 		
 														
-			<div class="col-lg-8 col-md-7 col-sm-12 wow fadeInUp " data-wow-delay="0.4s">
+			<div class="col-lg-7 col-md-6 col-sm-12 wow fadeInUp " data-wow-delay="0.4s">
 				<img src="images/indicadores.jpg" class="img-fluid" alt="Identidad">				
 			</div>
 
 
-			<div class="col-lg-4 col-md-5 col-sm-12">												
+			<div class="col-lg-5 col-md-6 col-sm-12">												
 				<div class="wow flipInX">						
-					<!-- DolarWeb IndMax Start --><div id="IndicadoresMax"><h2><a href="https://dolar.wilkinsonpc.com.co/">Dolar Hoy Colombia</a></h2></div><script type="text/javascript" src="https://dolar.wilkinsonpc.com.co/widgets/gratis/indicadores-economicos-max.js?ancho=410&alto=380&fondo=transparent&fsize=17&ffamily=sans-serif&fcolor=000000"></script><!-- DolarWeb IndMax End -->			
+					<!-- DolarWeb IndMax Start --><div id="IndicadoresMax"><h2><a href="https://dolar.wilkinsonpc.com.co/">Dolar Hoy Colombia</a></h2></div><script type="text/javascript" src="https://dolar.wilkinsonpc.com.co/widgets/gratis/indicadores-economicos-max.js?ancho=390&alto=380&fondo=transparent&fsize=17&ffamily=sans-serif&fcolor=000000"></script><!-- DolarWeb IndMax End -->			
 				</div>								
 			</div>
 		</div>
 
 		<!-- Banck and Dian seccion
 		================================================== -->
-		<section id="dian">
-			
+		<section id="dian" class="mt-4">			
 			<div class="row">			
 				<div  class="col-md-5 col-sm-12 ">		
 					<a href="https://www.dian.gov.co/" target="_blank">
-						<img src="images/dian.png" height="110px" class="" alt="dian">			
+						<img src="images/dian.png"  class="img-fluid" alt="dian">			
 					</a>					
 				</div>
-				<div class="col-md-7 col-sm-12 ">			
+				<div class="col-md-7 col-sm-12 mt-3">			
 					<a href="https://www.banrep.gov.co/" target="_blank">
-						<img src="images/republica.png" height="100px" class="" alt="banco de la republica">	
+						<img src="images/republica.png" class="img-fluid" alt="banco de la republica">	
 					</a>									
 				</div>
-			</div>
-			
+			</div>			
 		</section>
 	</div>
 
@@ -194,7 +171,7 @@
 
 
 <!-- Contact seccion
-================================================== -->
+================================================== 
 <section id="contact">
 	<div class="container">
 		<div class="row">			
@@ -207,7 +184,9 @@
 					<textarea id="message" placeholder="  Mensaje" class="wow fadeIn" data-wow-delay="0.7s" name="message" rows="5" cols="25"></textarea><br />
 					<input class="btn btn-default contact-submit smoothScroll wow fadeInUp" data-wow-delay="0.6s" type = "submit" value = "ENVIAR">		
 					
-					<!-- Info Modal -->
+					COMENTARIO Info Modal 
+
+
 					<div id="show_contact_msg" class = "modal_view">
 						<div class="modal-content">						  
 						  <p id = "modal-message">
@@ -221,7 +200,7 @@
 		</div>
 	</div>
 </section>
-
+-->
 
 
 <!-- Javascript
