--- a/customers.html
+++ b/customers.html
@@ -107,10 +107,10 @@
 					<a class="nav-link" href="#">CLIENTES</a>
 				</li>
 				<li class="nav-item px-2">
-					<a class="nav-link" href="#">INDICADORES</a>
+					<a class="nav-link" href="contact.html">INDICADORES</a>
 				</li>
 				<li class="nav-item px-2">
-					<a class="nav-link" href="#">CONTÁCTANOS</a>
+					<a class="nav-link" href="contact.html">CONTÁCTANOS</a>
 				</li>
 			</ul>			
 		</div>
