--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
 					<a class="nav-link" href="customers.html">CLIENTES</a>
 				</li>
 				<li class="nav-item px-2">
-					<a class="nav-link" href="#">INDICADORES</a>
+					<a class="nav-link" href="contact.html">INDICADORES</a>
 				</li>
 				<li class="nav-item px-2">
-					<a class="nav-link" href="#">CONTÁCTANOS</a>
+					<a class="nav-link" href="contact.html">CONTÁCTANOS</a>
 				</li>
 			</ul>			
 		</div>
@@ -127,7 +127,7 @@
 					<div class="button-container home-desk">
 						<img src="images/home_nuevo.jpg" class="img-fluid " alt="Identidad">	  	
 						<a href="services.html" class="wow fadeInUp btn-services" data-wow-delay="0.4s">SERVICIOS</a>
-						<a href="#" class="wow fadeInUp btn-contact" data-wow-delay="0.9s">CONTÁCTANOS</a> 
+						<a href="contact.html" class="wow fadeInUp btn-contact" data-wow-delay="0.9s">CONTÁCTANOS</a> 
 					</div>
 					<div class="home-mov">
 						<img src="images/home_nuevo.jpg" class="img-fluid " alt="Identidad">	
