--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-md-12 p-0">
-					<img src="images/pie_texto.png" class="img-fluid">					
+					<img src="images/home_footer.jpg" class="img-fluid">					
 				</div>	
 			</div>	
 		</div>	
