--- a/index.html
+++ b/index.html
@@ -219,21 +219,21 @@
 
 	</div>
 
-	<!-- Pie de pagina (Footer) PARA RESPONSIVE
-	==================================================  
+	
 
-		<footer>
+	<footer>
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-md-12 p-0">
-					<img src="images/pie_texto.png" class="img-fluid pie-desk">
-					<img src="images/pie_resp.jpg" class="img-fluid pie-mov">
+					<img src="images/pie_texto.png" class="img-fluid">					
 				</div>	
 			</div>	
 		</div>	
 	</footer>
-		-->
+		
 	
+		<!-- Pie de pagina (Footer) PARA RESPONSIVE
+	==================================================  
 	<footer>
 		<div class="container-fluid">
 			<div class="row">
@@ -243,6 +243,7 @@
 			</div>	
 		</div>	
 	</footer>
+	-->
 
 
 		
