--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
 
 	<!-- Main CSS
    ================================================== -->
-	<link rel="stylesheet" href="css/style-resp.css">
+	<link rel="stylesheet" href="css/style.css">
 
 	<!-- Google web font
    ================================================== -->
@@ -128,7 +128,7 @@
 			</div>
 		</div>
 
-		<!-- Banck and Dian seccion
+		<!-- Bank and Dian seccion
 		================================================== -->
 		<section id="dian" class="mt-4">			
 			<div class="row">			
@@ -157,9 +157,16 @@
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 p-0">										
 					<div class="contact-container">
-						<img src="images/contact_footer.jpg" class="img-fluid " alt="Identidad">	  	
-						<a href="services.html" class="wow fadeInUp btn-services" data-wow-delay="0.4s">SERVICIOS</a>
-						<a href="contact.html" class="wow fadeInUp btn-contact" data-wow-delay="0.9s">CONTÁCTANOS</a> 
+						<form id="contact_form" action="mail.php" method="post">	
+							<img src="images/contact_footer.jpg" class="img-fluid " alt="Identidad">	 
+							<h2 class="wow bounceIn title">CONTÁCTANOS</h2>
+							<h4 class="font-weight-normal wow fadeInUp message mb-5" data-wow-delay="0.2s">Contamos con un equipo de contadores a tu servicio, por favor escríbenos tus preguntas e inquietudes.</h4>
+							
+							<input id="name" placeholder="  Nombre" type="text" class="wow fadeIn contact-name" data-wow-delay="0.4s" name="name">	
+							<input id="email" placeholder="  E-mail" type="text" class="wow fadeIn contact-email" data-wow-delay="0.6s" name="email">					
+							<textarea id="message" placeholder="  Mensaje" class="wow fadeIn contact-message" data-wow-delay="0.7s" name="message" rows="5"></textarea><br />
+							<input class="btn btn-default contact-submit smoothScroll wow fadeInUp" data-wow-delay="0.6s" type = "submit" value = "ENVIAR">	
+						</form>		
 					</div>
 				</div>
 			</div>
