--- a/index.html
+++ b/index.html
@@ -206,43 +206,46 @@
 					</div>	
 				</div>
 
-				<div class="only-mobile">
+				<!-- <div class="only-mobile">
 					<div class="col-sm-12 p-0 m-0 wow fadeInUp" data-wow-delay="0.4s">
 						<img src="images/profesional.jpg" class="img-fluid" alt="Valores y equipo profesional">
 					</div>	
 					<div class="col-sm-12 p-0 m-0 wow fadeInUp" data-wow-delay="0.4s">
 						<img src="images/valores.jpg" class="img-fluid" alt="Valores y equipo profesional">
 					</div>	
-				</div>			
+				</div> -->			
 			</div>		
 		</section>
 
 	</div>
 
-	
 
+
+	<!-- Pie de pagina (Footer) PARA RESPONSIVE
+	==================================================  -->
 	<footer>
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-md-12 p-0">
-					<img src="images/pie_texto.png" class="img-fluid">					
+		<div class="only-desktop">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-md-12 p-0">
+						<img src="images/pie_texto.png" class="img-fluid">					
+					</div>	
 				</div>	
 			</div>	
-		</div>	
+		</div>
+		
+		<div class="only-mobile">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12 p-0">
+						<img src="images/home_footer.jpg" class="img-fluid">
+					</div>	
+				</div>	
+			</div>	
+		</div>		
 	</footer>
 		
 	
-		<!-- Pie de pagina (Footer) PARA RESPONSIVE
-	==================================================  -->
-	<footer>
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-md-12 p-0">
-					<img src="images/home_footer.jpg" class="img-fluid">					
-				</div>	
-			</div>	
-		</div>	
-	</footer>
 	
 
 
