--- a/index.html
+++ b/index.html
@@ -123,14 +123,28 @@
 	<section class="after-nav-margin" id="home">
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-lg-12 col-md-12 col-sm-12 p-0">										
-					<div class="button-container home-desk">
-						<img src="images/home_nuevo.jpg" class="img-fluid " alt="Identidad">	  	
-						<a href="services.html" class="wow fadeInUp btn-services" data-wow-delay="0.4s">SERVICIOS</a>
-						<a href="contact.html" class="wow fadeInUp btn-contact" data-wow-delay="0.9s">CONTÁCTANOS</a> 
+				<div class="only-desktop">
+					<div class="col-lg-12 col-md-12 col-sm-12 p-0">										
+						<div class="button-container">
+							<img src="images/home_nuevo.jpg" class="img-fluid " alt="Identidad">	  	
+							<a href="services.html" class="wow fadeInUp btn-services" data-wow-delay="0.4s">SERVICIOS</a>
+							<a href="contact.html" class="wow fadeInUp btn-contact" data-wow-delay="0.9s">CONTÁCTANOS</a> 
+						</div>
+						<div class="home-mov">
+							<img src="images/home_nuevo.jpg" class="img-fluid " alt="Identidad">	
+						</div>
 					</div>
-					<div class="home-mov">
-						<img src="images/home_nuevo.jpg" class="img-fluid " alt="Identidad">	
+				</div>
+				<div class="only-mobile">
+					<div class="col-lg-12 col-md-12 col-sm-12 p-0">										
+						<div class="button-container">
+							<img src="images/home_nuevo.jpg" class="img-fluid " alt="Identidad">	  	
+							<a href="services.html" class="wow fadeInUp btn-services" data-wow-delay="0.4s">SERVICIOS</a>
+							<a href="contact.html" class="wow fadeInUp btn-contact" data-wow-delay="0.9s">CONTÁCTANOS</a> 
+						</div>
+						<div class="home-mov">
+							<img src="images/home_nuevo.jpg" class="img-fluid " alt="Identidad">	
+						</div>
 					</div>
 				</div>
 			</div>
