--- a/index.html
+++ b/index.html
@@ -121,34 +121,26 @@
 	<!-- Home section
 	================================================== -->
 	<section class="after-nav-margin" id="home">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="only-desktop">
+		<div class="container-fluid">			
+			<div class="only-desktop">
+				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12 p-0">										
 						<div class="button-container">
 							<img src="images/home_nuevo.jpg" class="img-fluid " alt="Identidad">	  	
 							<a href="services.html" class="wow fadeInUp btn-services" data-wow-delay="0.4s">SERVICIOS</a>
 							<a href="contact.html" class="wow fadeInUp btn-contact" data-wow-delay="0.9s">CONTÁCTANOS</a> 
-						</div>
-						<div class="home-mov">
-							<img src="images/home_nuevo.jpg" class="img-fluid " alt="Identidad">	
-						</div>
-					</div>
-				</div>
-				<div class="only-mobile">
-					<div class="col-lg-12 col-md-12 col-sm-12 p-0">										
-						<div class="button-container">
-							<img src="images/home_nuevo.jpg" class="img-fluid " alt="Identidad">	  	
-							<a href="services.html" class="wow fadeInUp btn-services" data-wow-delay="0.4s">SERVICIOS</a>
-							<a href="contact.html" class="wow fadeInUp btn-contact" data-wow-delay="0.9s">CONTÁCTANOS</a> 
-						</div>
-						<div class="home-mov">
-							<img src="images/home_nuevo.jpg" class="img-fluid " alt="Identidad">	
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
+			<div class="only-mobile">
+				<div class="row">
+					<div class="col-sm-12 p-0">																
+						<img src="images/home_resp.jpg" class="img-fluid stretch-width" alt="Identidad">						
+					</div>
+				</div>
+			</div>
+		</div>		
 	</section>
 
 
@@ -157,85 +149,106 @@
 	================================================== -->
 	<div class="mt-5" id="nosotros"></div>
 
-	<!-- Section title -->
-	<div class = "container">
-		<div class="row">
-			<div class="col-md-12 col-sm-12 mb-3 wow bounceIn" data-wow-delay="0.4s">
-				<div class="only-mobile">
-					<h4>Nosotros</h4>				
-				</div>
-				<div class="only-desktop">
-					<h2>Nosotros</h2>				
+	<!-- Section title Desk -->
+	<div class="only-desktop">
+		<div class = "container">
+			<div class="row">
+				<div class="col-md-12 col-sm-12 mb-3 wow bounceIn" data-wow-delay="0.4s">
+					<h2>Nosotros</h2>									
 				</div>
 			</div>
 		</div>
-	
-		<!-- DEPRECATED: Whole image not longer display
-		<section id = "identity">		
+	</div>
+	<!-- Mobile -->
+	<div class="only-mobile">
+		<div class = "container-fluid">
 			<div class="row">
-				<div class="col-md-12 wow fadeInUp" data-wow-delay="0.4s">
-					<img src="images/vi_mi_ob.webp" class="img-fluid" alt="Identidad">
-				</div>		
-			</div>		
-		</section>
-		-->
-
-		<section id = "identity">		
-			<div class="row">
-				<div class="col-lg-4 col-md-4 col-sm-12 no-padding-mob wow fadeInUp " data-wow-delay="0.4s">
-					<img src="images/vision.jpg" class="img-fluid " alt="Identidad">
-				</div>	
-				<div class="col-lg-4 col-md-4 col-sm-12 no-padding-mob wow fadeInDown" data-wow-delay="0.6s">
-					<img src="images/mision.jpg" class="img-fluid " alt="Identidad">
-				</div>	
-				<div class="col-lg-4 col-md-4 col-sm-12 no-padding-mob wow fadeInUp" data-wow-delay="0.8s">
-					<img src="images/objetivo.jpg" class="img-fluid " alt="Identidad">
-				</div>	
-			</div>		
-		</section> 	
-	
-
-
-		<!-- Values (Valores y equipo profesional) seccion
-		================================================== -->
-		<div id="equipo" class="mt-5"></div>
-
-		<!-- Section title -->
-		<div class="row title">
-			<div class="col-md-12 col-sm-12 mb-3 wow bounceIn" data-wow-delay="0.4s">
-				<div class="only-mobile">
-					<h4>Valores</h4>				
-				</div>
-				<div class="only-desktop">
-					<h2>Valores</h2>				
+				<div class="col-md-12 col-sm-12 mb-3 wow bounceIn" data-wow-delay="0.4s">					
+					<h4>Nosotros</h4>								
 				</div>
 			</div>
 		</div>
-
-		<section id = "values">		
-			<div class="row">
-				<div class="only-desktop">
-					<div class="col-md-12 p-0 m-0 wow fadeInUp" data-wow-delay="0.4s">
-						<img src="images/values.jpg" class="img-fluid" alt="Valores y equipo profesional">
-					</div>	
-				</div>
-
-				<!-- <div class="only-mobile">
-					<div class="col-sm-12 p-0 m-0 wow fadeInUp" data-wow-delay="0.4s">
-						<img src="images/profesional.jpg" class="img-fluid" alt="Valores y equipo profesional">
-					</div>	
-					<div class="col-sm-12 p-0 m-0 wow fadeInUp" data-wow-delay="0.4s">
-						<img src="images/valores.jpg" class="img-fluid" alt="Valores y equipo profesional">
-					</div>	
-				</div> -->			
-			</div>		
-		</section>
-
 	</div>
 
+	<section id = "identity">								
+		<div class="only-desktop">
+			<div class = "container">
+				<div class="row">
+					<div class="col-md-4 wow fadeInUp " data-wow-delay="0.4s">
+						<img src="images/vision.jpg" class="img-fluid " alt="Identidad">
+					</div>	
+					<div class="col-md-4 wow fadeInDown" data-wow-delay="0.6s">
+						<img src="images/mision.jpg" class="img-fluid " alt="Identidad">
+					</div>	
+					<div class="col-md-4 wow fadeInUp" data-wow-delay="0.8s">
+						<img src="images/objetivo.jpg" class="img-fluid " alt="Identidad">
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="only-mobile">
+			<div class = "container-fluid">
+				<div class="row">
+					<div class="col-sm-12 p-0 wow fadeInUp " data-wow-delay="0.4s">
+						<img src="images/vision.jpg" class="img-fluid stretch-width" alt="Identidad">
+					</div>	
+					<div class="col-sm-12 p-0 wow fadeInDown" data-wow-delay="0.6s">
+						<img src="images/mision.jpg" class="img-fluid stretch-width" alt="Identidad">
+					</div>	
+					<div class="col-sm-12 p-0 wow fadeInUp" data-wow-delay="0.8s">
+						<img src="images/objetivo.jpg" class="img-fluid stretch-width" alt="Identidad">
+					</div>
+				</div>
+			</div>
+		</div>						
+	</section> 	
+	
 
 
-	<!-- Pie de pagina (Footer) PARA RESPONSIVE
+	<!-- Values (Valores y equipo profesional) seccion
+	================================================== -->
+	<div id="equipo" class="mt-5"></div>
+
+
+	<!-- Section title  Desk -->
+	<div class="only-desktop">
+		<div class = "container">
+			<div class="row">
+				<div class="col-md-12 col-sm-12 mb-3 wow bounceIn" data-wow-delay="0.4s">
+					<h2>Valores</h2>									
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- Mobile -->
+	<div class="only-mobile">
+		<div class = "container-fluid">
+			<div class="row">
+				<div class="col-md-12 col-sm-12 mb-3 wow bounceIn" data-wow-delay="0.4s">					
+					<h4>Valores</h4>								
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<section id = "values">		
+		<div class = "container">
+			<div class="row">
+				<div class="only-desktop">
+					<div class="col-md-12 wow fadeInUp" data-wow-delay="0.4s">
+						<img src="images/values.jpg" class="img-fluid" alt="Valores y equipo profesional">
+					</div>	
+				</div>		
+			</div>	
+		</div>	
+	</section>
+
+	
+
+
+
+	<!-- Pie de pagina (Footer)
 	==================================================  -->
 	<footer>
 		<div class="only-desktop">
@@ -249,10 +262,10 @@
 		</div>
 		
 		<div class="only-mobile">
-			<div class="container">
+			<div class="container-fluid">
 				<div class="row">
 					<div class="col-md-12 p-0">
-						<img src="images/home_footer.jpg" class="img-fluid">
+						<img src="images/home_footer.jpg" class="img-fluid stretch-width">
 					</div>	
 				</div>	
 			</div>	
